--- a/alira_mobile/pubspec.yaml
+++ b/alira_mobile/pubspec.yaml
@@ -20,13 +20,20 @@ dependencies:
   flutter:
     sdk: flutter
 
+  bloc: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  grpc: ^1.0.1
+  flutter_bloc: ^2.0.1
 
-  protobuf: ^0.13.1
+  grpc: ^2.1.3
+
+  protobuf: ^1.0.1
+
+  rxdart: ^0.22.6
+
+  shimmer: ^1.0.0
 
 dev_dependencies:
   flutter_test:
